# hybridmd

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: demo_elements.json  demo_elements_table_heavy.json  expected_output.md  table_heavy_elements.json
scripts/: token_report.py
src/hybridmd/: __init__.py  analyzer.py  cli.py  router.py  schema.py  serialize.py
src/hybridmd/adapters/: __init__.py  unstructured_io.py
tests/: test_adapter_unstructured.py  test_analyzer.py  test_cli.py  test_e2e.py  test_router.py  test_schema.py  test_serialize.py  test_version.py
