[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hybridmd"
version = "0.1.0"
description = "Convert parsed document elements into hybrid Markdown: Markdown where it's lossless, sanitized embedded HTML only for tables Markdown cannot represent."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Matteo Craviotto", email = "matteo.craviotto@gmail.com" }]
keywords = ["markdown", "html", "document-conversion", "tables", "sanitization"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = ["beautifulsoup4"]

[project.optional-dependencies]
# Adapters (document parsers) and backends (renderers / HTML sanitizers) ship as
# optional extras and will be declared here as the library grows, e.g.:
#   docx     = ["python-docx"]
#   sanitize = ["nh3"]
# The unstructured adapter reads its input purely by duck typing, so this extra is
# needed only to PRODUCE elements — never to import/run the adapter or core CI.
unstructured = ["unstructured"]
# Dev tooling for scripts/token_report.py only — deliberately NOT in `dev`, so
# core CI stays lean and never installs it.
bench = ["tiktoken"]
dev = ["pytest", "ruff", "mypy"]

[project.urls]
Homepage = "https://github.com/mcravi8/hybridmd"
Repository = "https://github.com/mcravi8/hybridmd"
Issues = "https://github.com/mcravi8/hybridmd/issues"

[project.scripts]
hybridmd = "hybridmd.cli:run"

[tool.hatch.build.targets.wheel]
packages = ["src/hybridmd"]

# Explicit allow-list so the sdist ships exactly what belongs there and never
# sweeps in local tooling files (e.g. .claude/) that hatchling would otherwise
# include because they are ignored only by a global, not the repo's, gitignore.
[tool.hatch.build.targets.sdist]
include = [
  "src/hybridmd",
  "tests",
  "examples",
  "scripts",
  "CHANGELOG.md",
  "CLAUDE.md",
  "LICENSE",
  "README.md",
  "pyproject.toml",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = ["-ra", "--strict-markers", "--strict-config"]
testpaths = ["tests"]
pythonpath = ["src"]
